--- a/fastapi/static/description/index.html
+++ b/fastapi/static/description/index.html
@@ -501,7 +501,7 @@ variable into your fastapi_endpoint module called for example ‘demo_api_router
 <span class="n">demo_api_router</span> <span class="o">=</span> <span class="n">APIRouter</span><span class="p">()</span>
 </pre>
 <p>To make your router available to your app, you need to add it to the list of routers
-returned by the <strong>get_fastapi_routers</strong> method of your fastapi_endpoint model.</p>
+returned by the <strong>_get_fastapi_routers</strong> method of your fastapi_endpoint model.</p>
 <pre class="code python literal-block">
 <span class="kn">from</span> <span class="nn">fastapi</span> <span class="kn">import</span> <span class="n">APIRouter</span>
 <span class="kn">from</span> <span class="nn">odoo</span> <span class="kn">import</span> <span class="n">api</span><span class="p">,</span> <span class="n">fields</span><span class="p">,</span> <span class="n">models</span>
@@ -515,10 +515,10 @@ returned by the <strong>get_fastapi_routers</strong> method of your fastapi_endp
     <span class="p">)</span>
 
     <span class="nd">&#64;api</span><span class="o">.</span><span class="n">model</span>
-    <span class="k">def</span> <span class="nf">get_fastapi_routers</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+    <span class="k">def</span> <span class="nf">_get_fastapi_routers</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">app</span> <span class="o">==</span> <span class="s2">&quot;demo&quot;</span><span class="p">:</span>
             <span class="k">return</span> <span class="p">[</span><span class="n">demo_api_router</span><span class="p">]</span>
-        <span class="k">return</span> <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="n">get_fastapi_routers</span><span class="p">()</span>
+        <span class="k">return</span> <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="n">_get_fastapi_routers</span><span class="p">()</span>
 
 <span class="c1"># create a router</span>
 <span class="n">demo_api_router</span> <span class="o">=</span> <span class="n">APIRouter</span><span class="p">()</span>
@@ -540,10 +540,10 @@ that returns a list of partners.</p>
     <span class="p">)</span>
 
     <span class="nd">&#64;api</span><span class="o">.</span><span class="n">model</span>
-    <span class="k">def</span> <span class="nf">get_fastapi_routers</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+    <span class="k">def</span> <span class="nf">_get_fastapi_routers</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">app</span> <span class="o">==</span> <span class="s2">&quot;demo&quot;</span><span class="p">:</span>
             <span class="k">return</span> <span class="p">[</span><span class="n">demo_api_router</span><span class="p">]</span>
-        <span class="k">return</span> <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="n">get_fastapi_routers</span><span class="p">()</span>
+        <span class="k">return</span> <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="n">_get_fastapi_routers</span><span class="p">()</span>
 
 <span class="c1"># create a router</span>
 <span class="n">demo_api_router</span> <span class="o">=</span> <span class="n">APIRouter</span><span class="p">()</span>
