--- a/fastapi/static/description/index.html
+++ b/fastapi/static/description/index.html
@@ -1521,7 +1521,7 @@ and it will help the other developers to understand your code.</p>
 are used in the python community when developing a fastapi app.</p>
 <pre class="code literal-block">
 .
-├── api_x
+├── x_api
 │&nbsp;&nbsp; ├── data
 │&nbsp;&nbsp; │   ├── ... .xml
 │&nbsp;&nbsp; ├── demo
@@ -1564,7 +1564,7 @@ in your <strong>‘items.py’</strong> file, you will define a router like this
 <pre class="code python literal-block">
 <span class="n">router</span> <span class="o">=</span> <span class="n">APIRouter</span><span class="p">(</span><span class="n">tags</span><span class="o">=</span><span class="p">[</span><span class="s2">&quot;items&quot;</span><span class="p">])</span>
 
-<span class="n">router</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;items/&quot;</span><span class="p">,</span> <span class="n">response_model</span><span class="o">=</span><span class="n">List</span><span class="p">[</span><span class="n">Item</span><span class="p">])</span>
+<span class="n">router</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;/items&quot;</span><span class="p">,</span> <span class="n">response_model</span><span class="o">=</span><span class="n">List</span><span class="p">[</span><span class="n">Item</span><span class="p">])</span>
 <span class="k">def</span> <span class="nf">list_items</span><span class="p">():</span>
     <span class="k">pass</span>
 </pre>
